source/stylesheets/custom.css.sass
html, body
  height: 100%

html
  background-color: #2B8EF4

  #flash-detect
    display: none
    p
      background: #FC6
      border: 1px solid #F00
      padding: 10px 20px
      margin: 0
      font-weight: bold

  body:before
    content: ""
    height: 100%
    float: left
    width: 0
    margin-top: -32767px

  body, .bitter
    font: 15px / 22px "Bitter", Georgia, serif

  .bitter-italic
    font-family: 'Bitter I'

  .permanent-marker
    font-family: 'Permanent Marker', cursive

  .sans-serif
    font-family: 'Lucida Grande', verdana, sans-serif

  h1, h2, h3, h4, h5, h6
    margin: 0
    font-size: 15px
    line-height: 22px

  p, ul, table, img, #flash-detect
    margin-top: 0
    margin-bottom: 22px

  p:last-child, ul:last-child, table:last-child
    margin-bottom: 0

  iframe
    border: none
    display: block

  .shadow
    border-top: 1px solid rgba(255, 255, 255, 0.3)
    border-bottom: 1px solid rgba(0, 0, 0, 0.7)
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3)
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3)
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3)
    -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3), 0 2px 3px rgba(0, 0, 0, 0.7)
    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3), 0 2px 3px rgba(0, 0, 0, 0.7)
    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.3), 0 2px 3px rgba(0, 0, 0, 0.7)

  .rounded.liner
    padding-top: 21px
    padding-bottom: 21px

  .video
    padding: 2px
    background: black
    margin-bottom: 22px

  .rounded
    -webkit-border-radius: 6px
    -moz-border-radius: 6px
    border-radius: 6px

  .liner
    padding: 22px 20px
    text-shadow: 0 1px 0 white
    background: #E6E6E6
    background: rgba(255, 255, 255, 0.8)
    margin-bottom: 22px

  #header, .subnavigation
    -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.7)
    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.7)
    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.7)
    position: fixed
    left: 0
    right: 0

  #header
    background: #000075
    background: -moz-linear-gradient(top, #16218c, #000075)
    background: -o-linear-gradient(top, #16218c, #000075)
    background: -webkit-gradient(linear, left top, left bottom, from(#16218c), to(#000075))
    background: linear-gradient(top, #16218c, #000075)
    text-shadow: 0 -1px 0 black
    top: 0
    z-index: 998
    height: 44px
    a
      display: block
      color: white
      text-decoration: none
      &:link, &:visited
        color: white
        text-decoration: none
      &:hover
        text-decoration: underline
    ul
      color: #F8F8F8
      list-style: none
      padding-left: 0
      li
        float: right
        padding-left: 25px
        padding-right: 25px
        cursor: pointer
        line-height: 44px
        &:hover
          text-decoration: none
    h1
      color: #F8F8F8
      font-size: 16px
      line-height: 42px
    .grid_3
      position: relative
    #centennial
      position: absolute
      top: 37px
      left: 19px
      height: 22px
      width: 163px
      z-index: 100
      .banner
        font-size: 11px
        background: url('/images/centennial-banner.png') no-repeat center center
        height: 22px
        text-align: center
        line-height: 20px
        a
          color: #351400
          text-shadow: 0 1px 0 #FFF7CA
          text-decoration: none
          &:visited, &:link
            color: #351400
            text-shadow: 0 1px 0 #FFF7CA
            text-decoration: none
          &:hover
            text-decoration: underline

  .subnavigation
    display: none
    background: #f5f5f3
    background: -moz-linear-gradient(top, white, #f5f5f3)
    background: -o-linear-gradient(top, white, #f5f5f3)
    background: -webkit-gradient(linear, left top, left bottom, from(white), to(#f5f5f3))
    background: linear-gradient(top, white, #f5f5f3)
    top: 44px
    color: #BBB
    z-index: 99
    .container_12
      padding: 11px 0
    a
      color: #000075
      text-decoration: none
      &:link
        color: #000075
        text-decoration: none
      &:visited
        color: #16218C
      &:hover
        text-decoration: underline

  #footer
    font-size: 11px
    text-align: center
    color: #D0D0D0
    text-shadow: 0 1px 0 black
    position: relative
    padding-top: 11px
    padding-bottom: 11px
    margin-top: -111px
    height: 88px
    background: #515151
    background: rgba(0, 0, 0, 0.35)
    border-top: 1px solid black
    border-top: 1px solid rgba(0, 0, 0, 0.4)
    clear: both
    a
      color: #D0D0D0
      text-decoration: none
      border-bottom: 1px solid #848484
      &:link, &:visited
        color: #D0D0D0
        text-decoration: none
        border-bottom: 1px solid #848484
      &:hover
        border-bottom: 1px solid #D0D0D0
    address
      font-style: normal

  .slideshow
    min-height: 1px

  .first
    margin-left: 0 !important
    padding-left: 0 !important

  .last
    margin-right: 0 !important
    padding-right: 0 !important

  #wrap
    min-height: 100%
    width: 100%

  #main
    overflow: auto
    padding-bottom: 111px
    a
      color: #022DBF
      text-decoration: none
      &:link
        color: #022DBF
        text-decoration: none
      &:hover
        text-decoration: underline
      &:visited
        color: #650096

  #main
    padding-top: 66px
    h2
      color: #000C51
      font-size: 20px
      line-height: 33px
      margin-bottom: 11px
      a, a:link, a:visited
        float: right
        color: white
        font-size: 13px
        font-weight: bold
        line-height: 31px
        -moz-box-shadow: inset 0px 1px 0px 0px #7a80f5
        -webkit-box-shadow: inset 0px 1px 0px 0px #7a80f5
        box-shadow: inset 0px 1px 0px 0px #7a80f5
        background: #000075
        background: -moz-linear-gradient(top, #2934a0, #000075)
        background: -o-linear-gradient(top, #2934a0, #00278e)
        background: -webkit-gradient(linear, left top, left bottom, from(#2934a0), to(#00278e))
        background: linear-gradient(top, #2934a0, #00278e)
        -moz-border-radius: 5px
        -webkit-border-radius: 5px
        border-radius: 5px
        border: 1px solid #000230
        padding: 0 16px
        text-decoration: none
        text-shadow: 0 -1px 0 #000230
        &:hover
          text-decoration: underline

  .do-something
    margin-bottom: 24px
    .play
      background: url("/images/home/play.png") no-repeat center center
      opacity: 0.7
      height: 330px
      width: 460px
      position: absolute
      z-index: 500
      cursor: pointer
    .slideshow
      height: 330px
    .video
      display: none
      margin: 0
    .somethings
      padding: 0
      margin-top: 287px
      color: #000f60
      background: white
      background: rgba(255, 255, 255, 0.7)
      list-style: none
      font-size: 20px
      -webkit-border-bottom-right-radius: 6px
      -webkit-border-bottom-left-radius: 6px
      -moz-border-radius-bottomright: 6px
      -moz-border-radius-bottomleft: 6px
      border-bottom-right-radius: 6px
      border-bottom-left-radius: 6px
      li
        line-height: 44px
        display: none
        text-align: center
        font-weight: bold
        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5)

  .tagline-and-countdown
    margin: 11px 0 55px
    color: #000F60
    text-shadow: 0 1px 0 #92CBF9

  .tagline
    text-align: center
    font-size: 38px
    line-height: 77px

  .countdown
    width: 360px
    margin: 0 auto
    font-size: 22px

  .intro
    .liner
      height: 288px

